--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,9 @@ org.gradle.java.home=C:/Program Files/Java/jdk-17.0.1
 	loader_version=0.13.3
 
 # Mod Properties
-	mod_version = 1.18.2-0.3.3
+	mod_version = 0.3.4
 	maven_group = net.justalittlewolf
-	archives_base_name = modpackloaderfabric-mod
+	archives_base_name = modpackloaderfabric_1.18
 
 # Dependencies
 	fabric_version=0.47.8+1.18.2
